[project]
name = "qwiklabs"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.10.*"
dependencies = [
    "dataproc-spark-connect>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.149.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-dataproc>=5.27.0",
    "google-cloud-storage>=3.10.1",
    "ipykernel>=7.2.0",
    "pyspark>=4.1.1",
    "requests>=2.33.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
